Judging step 2b: the deletions, grid cells by column kind, the §5a guardrail
com.legend.exec.Equality is the only host judge now, by deletion: PureAsserts
loses its equality API (equalScalar, the float-declared overloads, the carrier
lattice); TdsCompare loses rowTupleMultiset / ulpOnlyCellDrift / rowEquals /
rowsPositional; JsonCompare is deleted as a class (its test becomes
EqualityJsonUnorderedRootTest). Math.ulp has one home.

Grid cells are judged by their column's declared Pure kind (Equality.grid).
The question it raised — mapping::tree asserts the Integer 11 under a
String-declared property mapped to an INT column — is the engine's own
boundary rule (dataTypeTransformer, execution_relational_execute.pure:299-320):
only a numeric declaration converts the wire cell; every other declaration is
the identity, a declaration is not a cast. Equality.effectiveKind is that
rule, cited.

VerdictChannelRegisterTest is the §5a guardrail: Math.ulp only in Equality,
Equality.* only from a closed set of callers. Ledgers: Equality 445,
PureAsserts 229, TdsCompare 366; sort-site map follows.

Chain green, quiet parallel 4m19s; no roster moved (DuckDB 108 EXACT, H2 430,
stress 4,700, PCT + Channel B); host mode DuckDB EXACT, H2 the same +2 as 2a.
Records: docs/JUDGING_TWO_MODES_2026_09_17.md (step 2b), docs/GATES.md.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_012cNKq4LmYZbotsa4LtAeUF